# michaelxavier.net

./: .gitignore  Makefile  README.markdown  Rakefile  cabal.project  default.nix  index.html  mxnet.cabal  mxnet.hs  stack.yaml
css/: default.css
javascripts/: application.js  sh_haskell.min.js
nix/: default.nix  sources.json
pages/: projects.markdown  resume.markdown
posts/: 2010-01-03-Reviving-the-ol-Blog.markdown  2010-01-09-What-you-don-t-know-about-cattr-accessor-can-kill-you.markdown  2010-01-14-Inheritance-with-state-machine.markdown  2010-01-19-Snippet-Get-all-but-the-last-n-elements-from-Array.markdown  2010-01-25-Broken-Audio-in-Flash-on-Chrome-for-Ubuntu.markdown  2010-02-05-Snippet-Rack-CommonLogger-in-Sinatra.markdown  2010-02-06-Spoofing-referrer-with-WWW-Mechanize.markdown  2010-02-12-Shell-Script-for-Checking-Ruby-Syntax.markdown  2010-02-19-RegExp-Before-Filter-in-Sinatra.markdown  2010-02-19-Vim-Tip-Close-All-Tabs-Except-Current.markdown  2010-02-20-RubyCheck-2-Electric-Boogaloo.markdown  2010-02-23-PROTIP-Update-Nokogiri-When-Updating-WWW-Mechanize.markdown  2010-03-12-IRSSI-Invalid-Argument.markdown  2010-03-13-Git-vim-bindings-for-fugitive-vim.markdown  2010-03-22-Ruby-Tip-Return-Explicitly-From-Block.markdown  2010-03-26-Destroy-All-Models-in-DataMapper.markdown  2010-04-08-factory-girl-on-Rails-3-undefined-method-config.markdown  2010-05-15-SASSify-a-CSS-File-Minify-a-JS-File-in-1-Line.markdown  2010-06-30-IShack-Util-Released.markdown  2010-07-03-Watch-Your-self-Around-DataMapper.markdown  2010-07-20-Leave-Object-Alone.markdown  (+56 more)
(+16 files in other folders)
