name:                mxnet
version:             0.1.0.0
synopsis:            MichaelXavier.net Blog
homepage:            http://michaelxavier.net
license:             AllRightsReserved
author:              Michael Xavier
maintainer:          michael@michaelxavier.net
copyright:           (C) 2011-2015 Michael Xavier
category:            Web
build-type:          Simple
extra-source-files:  README.markdown
cabal-version:       >=1.10

executable mxnet
  main-is:             mxnet.hs
  build-depends:       base   >= 4.6
                     , hakyll >= 4.7
                     , containers
  default-language:    Haskell2010
